--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header> 
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am people man</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Planet</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hobbieing about ya know?</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Professional Shaq impersonator</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Still Planet</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Im lonely...</p>
     </section>
 
     <footer id="footer">
